--- a/src/main/resources/templates/client-base-layout.html
+++ b/src/main/resources/templates/client-base-layout.html
@@ -1,31 +1,36 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	  xmlns:th="http://www.thymeleaf.org">
 
-<head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
+	<head th:include="fragments/head" th:with="pageTitle='Rent a Car Sofia'"></head>
 
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50"
-      th:inline="text">
+	<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50"
+														th:inline="text">
 
-<th:block th:include="fragments/preloader">
-</th:block>
-<header>
-    <th:block th:include="fragments/nav">
-    </th:block>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8KN5RG"
+					height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 
-    <div>
-        <p th:if="${message}" th:text="${message}"></p>
-    </div>
-</header>
-<main>
-    <article>
-        <div th:include="${view}"></div>
-    </article>
-</main>
+		<th:block th:include="fragments/preloader">
+		</th:block>
+		<header>
+			<th:block th:include="fragments/nav">
+			</th:block>
 
-<!--<footer th:include="fragments/footer"></footer>-->
+			<div>
+				<p th:if="${message}" th:text="${message}"></p>
+			</div>
+		</header>
+		<main>
+		<article>
+			<div th:include="${view}"></div>
+		</article>
+		</main>
 
-<th:block th:include="fragments/scripts">
-</th:block>
-</body>
+		<!--<footer th:include="fragments/footer"></footer>-->
+
+		<th:block th:include="fragments/scripts">
+		</th:block>
+	</body>
 </html>
