--- a/src/main/resources/templates/admin/booking/delete.html
+++ b/src/main/resources/templates/admin/booking/delete.html
@@ -62,10 +62,14 @@
     <div>
         <table>
             <tr>
-                <th>Код за Депозит</th>
+                <th>Код за Kапаро</th>
+                <th>Капаро</th>
+                <th>Депозит</th>
             </tr>
             <tr>
                 <td>[[${booking.id}]]</td>
+                <td>[[${booking.earnest}]]</td>
+                <td>[[${booking.deposit}]]</td>
             </tr>
         </table>
     </div>
