--- a/src/main/resources/templates/admin/booking/edit.html
+++ b/src/main/resources/templates/admin/booking/edit.html
@@ -12,9 +12,12 @@
                 <label for="endDate">Дата връщане</label>
                 <input type="text" id="endDate" name="endDate" th:value="${#dates.format(booking.endDate, 'dd-MM-yyyy')}"/>
 
-
                 <label for="earnest">Капаро</label>
                 <input type="number" id="earnest" name="earnest" th:value="${booking.earnest}"/>
+             
+                <label for="deposit">Депозит</label>
+                <input type="number" id="deposit" name="deposit" th:value="${booking.deposit}"/>
+
 
                 <div>
                     <button type="submit">Редактирай</button>
