fixed booking submit

--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -106,7 +106,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 email: "Моля въведете валиден email"
             },
             submitHandler: function(form) {
-                gtag_report_conversion();
+               // gtag_report_conversion();
                 form.submit();
                 $('.preloader').fadeIn(1000);
             }
