--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -9,16 +9,22 @@
             <div class="row">
                 <div class="col-md-7">
                     <ul class="circleList row">
-                        <li class="col-md-6 col-sm-6">
+                        <li class="col-md-4 col-sm-4">
                             <div class="cricle"><i class="fa fa-car" aria-hidden="true"></i></div>
                             <div class="title">Американски автомобили</div>
                         </li>
-                        <li class="col-md-6 col-sm-6">
+                        <li class="col-md-4 col-sm-4">
                             <div class="cricle"><i class="fa fa-tags" aria-hidden="true"></i></div>
                             <div class="title">Ниски цени</div>
                         </li>
+                        <li class="col-md-4 col-sm-4">
+                            <div class="cricle"><i class="fa fa-gas-pump" aria-hidden="true"></i></div>
+                            <div class="title">Нисък разход на гориво</div>
+                        </li>
+ 
                     </ul>
                     <p>Предлагаме американски автомобили и джипове с LPG системи, с разход на гориво - около &euro; 5 на 100км.<br>
+                        Нашите автомобили са на СЪЩАТА цена за определен период през цялата година, за всички сезони.
                     </p>
                     <ul class="orderlist">
                         <li>Без лимит на километрите.</li>
