--- a/src/main/resources/templates/base-layout.html
+++ b/src/main/resources/templates/base-layout.html
@@ -15,6 +15,11 @@
         <div th:include="${view}"></div>
     </article>
 </main>
+<footer>
+    <div>
+        <button onclick="location.href='/admin/options'">Назад</button>
+    </div>
+</footer>
 
 </body>
 </html>
