--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -30,7 +30,7 @@
                 </li>
                 <li>
                     <a href="javascript:void(0)" id="paypal_btn" class="btn btn-default">
-                        <i class="fa fa-paypal" aria-hidden="true">Депозит</i>
+                        <i class="fab fa-paypal" aria-hidden="true">Капаро</i>
                     </a>
                 </li>
                 <li><a href="https://drive.google.com/uc?export=download&amp;id=1VqlTGN6csN1KcLiStmg10v5IvlQJRP-Z">
