--- a/src/main/resources/templates/fragments/services.html
+++ b/src/main/resources/templates/fragments/services.html
@@ -19,7 +19,7 @@
             <!-- Service 2 -->
             <div class="col-md-6 col-sm-6">
                 <div class="service-thumb">
-                    <div class="thumb-icon"><i class="fa fa-money" aria-hidden="true"></i></div>
+                    <div class="thumb-icon"><i class="fa fa-money-bill-alt" aria-hidden="true"></i></div>
                     <h4>Специални намаления</h4>
                     <p>Предлагаме намаления в зависимост от периода на взимане.</p>
                 </div>
@@ -36,7 +36,7 @@
             <!-- Service 3 -->
             <div class="col-md-6 col-sm-6">
                 <div class="service-thumb">
-                    <div class="thumb-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                    <div class="thumb-icon"><i class="fa fa-map-marked-alt" aria-hidden="true"></i></div>
                     <h4>Безплатна доставка</h4>
                     <p>Вземете кола за 10+ дни и ще ви я доставим навсякъде в София.</p>
                 </div>
