--- a/src/main/resources/templates/admin/booking/edit.html
+++ b/src/main/resources/templates/admin/booking/edit.html
@@ -18,6 +18,11 @@
                 <label for="deposit">Депозит</label>
                 <input type="number" id="deposit" name="deposit" th:value="${booking.deposit}"/>
 
+                <label for="pricePerDay">Цена на ден</label>
+                <input type="number" id="pricePerDay" name="pricePerDay" th:value="${booking.pricePerDay}"/>
+
+                <label for="notes">Цена на ден</label>
+                <textarea id="notes" name="notes" th:value="${booking.notes}"></textarea>
 
                 <div>
                     <button type="submit">Редактирай</button>
