Email made optional. Instead of 10+ days -> always free delivery . hibernate.showslq = false. Custom pricePerDay. New Scheduling for deleting obsolete records. Added available for booking cars section in admin .

--- a/src/main/resources/templates/admin/options.html
+++ b/src/main/resources/templates/admin/options.html
@@ -20,5 +20,8 @@
         <div>
             <button onclick="location.href='/admin/booking/toDoNext'">График</button>
         </div>
+        <div>
+            <button onclick="location.href='/admin/booking/availableForBooking'">Свободни периоди</button>
+        </div>
     </div>
 </section>
