--- a/src/main/resources/templates/fragments/services.html
+++ b/src/main/resources/templates/fragments/services.html
@@ -38,7 +38,7 @@
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-map-marked-alt" aria-hidden="true"></i></div>
                     <h4>Безплатна доставка</h4>
-                    <p>Вземете кола за 10+ дни и ще ви я доставим навсякъде в София.</p>
+                    <p>Вземете кола и ще ви я доставим навсякъде в София.</p>
                 </div>
             </div>
         </div>
