--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -11,7 +11,7 @@
 						<p style="font-size: 20px; text-align: center;">
                             За заявка може директно да се обадите или да видите цените и колите след потърсване (по-долу)<br/>
                             Безплатна доставка навсякъде в София<br/>
-                            Заплащането става при взимане на автомобила. Само в брой. </p>
+                            Заплащането става при взимане на автомобила. В брой, с кредитна карта, с дебитна карта, или с PayPal</p>
                 	</div>
                     <a href="/#about" class="btn btn-default section-btn">Започнете</a> </div>
             </div>
