car deposit + forgot view

--- a/src/main/resources/templates/admin/car/all.html
+++ b/src/main/resources/templates/admin/car/all.html
@@ -10,6 +10,7 @@
                 <th>Истинска<br/>Снимка</th>
                 <th>Име</th>                
                 <th>Цена На<br/>Ден (&euro;)</th>
+                <th>Deposit(&euro;)</th>
                 <th>LPG</th>
                 <th>Превключване</th>
                 <th>Брой седалки</th>
@@ -24,6 +25,7 @@
                 </td>
                 <td>[[${car.name}]]</td>
                 <td>[[${car.price}]]</td>
+                <td>[[${car.deposit}]]</td>
                 <td>[[${car.LPG}]]</td>
                 <td>[[${car.transmission}]]</td>
                 <td>[[${car.seatCount}]]</td>
