--- a/src/main/resources/templates/admin/car/create.html
+++ b/src/main/resources/templates/admin/car/create.html
@@ -9,6 +9,9 @@
                 <label for="price">Цена</label>
                 <input type="number" id="price" name="price" th:value="${car.price}"/>
 
+                <label for="deposit">Депозит</label>
+                <input type="number" id="deposit" name="price" th:value="${car.deposit}"/>
+
                 <label for="seatCount">Брой седалки</label>
                 <input type="number" id="seatCount" name="seatCount" th:value="${car.seatCount}"/>
 
