--- a/src/main/resources/templates/admin/car/edit.html
+++ b/src/main/resources/templates/admin/car/edit.html
@@ -13,7 +13,7 @@
                 <input type="text" id="price" name="price" th:value="${car.price}"/>
 
                 <label for="deposit">Депозит</label>
-                <input type="number" id="deposit" name="price" th:value="${car.deposit}"/>
+                <input type="number" id="deposit" name="deposit" th:value="${car.deposit}"/>
 
                 <label for="seatCount">Брой седалки</label>
                 <input type="number" id="seatCount" name="seatCount" th:value="${car.seatCount}"/>
